--- a/land/index.html
+++ b/land/index.html
@@ -216,10 +216,10 @@
                         <a href="https://apps.apple.com/us/app/vio-period-tracker-cycle-diary/id1484327267">More information</a>
                     </li>
                     <li>
-                        <a href="#">Privacy Policy</a>
+                        <a href="privacy.html">Privacy Policy</a>
                     </li>
                     <li>
-                        <a href="#">Terms of Use</a>
+                        <a href="termsOfUse.html">Terms of Use</a>
                     </li>
                 </ul>
                 <div class="footer__copyright">© 2020 Vio Period & Ovulation Tracker, Inc.</div>
