--- a/dovezi/feedback.html
+++ b/dovezi/feedback.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header__top">
                 <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="logo">
+                    <img src="img/logo.svg" alt="logo">
                 </a>
                 <a href="#" class="header__logo header__logo__mob">
                     <img src="img/logo_mob.png" alt="logo">
@@ -710,7 +710,7 @@
                         <div class="sentence__box">
                             <form action="#" class="sentence__form">
                                 <div class="sentence__form__input-box">
-                                    <input type="text" placeholder="Вставьте ссылку на товар" required>
+                                    <input class="input1" type="text" placeholder="Вставьте ссылку на товар" required>
                                     <div class="input__clear"></div>
                                 </div>
                                 <button class="button button_green">Рассчитать стоимость доставки</button>
@@ -726,10 +726,6 @@
                                         Проверенные перевозчики
                                     </div>
                                 </div>
-                                <a href="viber://chat?number=%2B375295643829" class="sentence__contact">
-                                    <img src="img/viber_icon.png" alt="#">
-                                    Узнать стоимость в чате Viber
-                                </a>
                                 <a href="viber://chat?number=%2B375295643829" class="sentence__contact sentence__contact__mob">Чат Viber</a>
                             </div>
                         </div>
@@ -738,6 +734,60 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__box">
+                <div class="footer__left">
+                    <div class="footer__links">
+                        <ul>
+                            <li>
+                                <a href="#">Каталог магазинов</a>
+                            </li>
+                            <li>
+                                <a href="#">FAQ</a>
+                            </li>
+                            <li>
+                                <a href="#">Отзывы</a>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <a href="#">Условия использования</a>
+                            </li>
+                            <li>
+                                <a href="#">Политика конфиденциальности</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__right">
+                    <div class="footer__contact">
+                        <div class="footer__subtitle">Контакты</div>
+                        <div class="footer__hours">Пн-пт с 9.00 - 18.00</div>
+                        <a href="tel:+375295643829" class="footer__phone">+375 29 5643829</a>
+                        <div class="footer__messenger">
+                            <a href="viber://chat?number=%2B375295643829">
+                                <img src="img/viber_fill.png" alt="#">
+                            </a>
+                            <a href="https://t.me/+375295643829">
+                                <img src="img/tg.png" alt="#">
+                            </a>
+                        </div>
+                        <div class="footer__messenger footer__messenger__mob">
+                            <a href="viber://chat?number=%2B375295643829">Viber</a>
+                            <a href="https://t.me/+375295643829">Telegram</a>
+                            <a href="https://wa.me/375295643829">Whatsapp</a>
+                        </div>
+                    </div>
+                    <div class="footer__payment">
+                        <div class="footer__subtitle">Способы оплаты</div>
+                        <img src="img/visa.png" alt="#">
+                    </div>
+                </div>
+            </div>
+            <div class="footer__copyright">© 2021 Dovezi</div>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
