--- a/dovezi/index.html
+++ b/dovezi/index.html
@@ -13,10 +13,7 @@
         <div class="container">
             <div class="header__top">
                 <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="logo">
-                </a>
-                <a href="#" class="header__logo header__logo__mob">
-                    <img src="img/logo_mob.png" alt="logo">
+                    <img src="img/logo.svg" alt="logo">
                 </a>
                 <div class="header__box">
                     <button class="button button_green">Добавить заказ</button>
@@ -80,11 +77,7 @@
                                     Проверенные перевозчики
                                 </div>
                             </div>
-                            <a href="viber://chat?number=%2B375295643829" class="sentence__contact">
-                                <img src="img/viber_icon.png" alt="#">
-                                Узнать стоимость в чате Viber
-                            </a>
-                            <a href="viber://chat?number=%2B375295643829" class="sentence__contact sentence__contact__mob">Чат Viber</a>
+                            <a href="viber://chat?number=%2B375295643829" class="sentence__contact">Чат Viber</a>
                         </div>
                     </div>
                 </div>
@@ -549,7 +542,7 @@
                     </div>
                     <div class="advantage__item">
                         <div class="advantage__icon">
-                            <img src="img/adv_1.png" alt="#">
+                            <img src="img/adv_4.png" alt="#">
                         </div>
                         <div class="advantage__info">
                             <div class="advantage__subtitle">Гарантированная доставка</div>
@@ -583,10 +576,6 @@
                                         Проверенные перевозчики
                                     </div>
                                 </div>
-                                <a href="viber://chat?number=%2B375295643829" class="sentence__contact">
-                                    <img src="img/viber_icon.png" alt="#">
-                                    Узнать стоимость в чате Viber
-                                </a>
                                 <a href="viber://chat?number=%2B375295643829" class="sentence__contact sentence__contact__mob">Чат Viber</a>
                             </div>
                         </div>
