--- a/boddea/index.html
+++ b/boddea/index.html
@@ -72,7 +72,7 @@
                 </div>
             </header>
             <div class="promo__box">
-                <h1 class="promo__title">Научитесь есть <span>осознанно</span></h1>
+                <h1 class="promo__title">Научитесь <span class="line">есть</span> <span>осознанно</span></h1>
                 <h2 class="promo__subtitle">Психология - ключ к прочным изменениям</h2>
                 <div class="promo__links">
                     <a href="#" class="btn btn-red">Похудеть навсегда</a>
