--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -68,7 +68,44 @@
     </section>
 
     <main>
-
+        <section class="services">
+            <div class="container">
+                <div class="section__title services__title">
+                    ЧОО Витязь-96 <span>предоставляет все виды охранных услуг</span> 
+                </div>
+                <div class="services__descr">От охраны помещений до проектирования и монтажа “под ключ”</div>
+                <div class="services__box">
+                    <div class="section__title">Услуги</div>
+                    <div class="services__items">
+                        <a href="#" class="services__item">
+                            <img src="img/services_1.png" alt="#">
+                            <div class="services__subtitle">Пультовая охрана</div>
+                        </a>
+                        <a href="#" class="services__item">
+                            <img src="img/services_2.png" alt="#">
+                            <div class="services__subtitle">Физическая охрана</div>
+                        </a>
+                        <a href="#" class="services__item">
+                            <img src="img/services_3.png" alt="#">
+                            <div class="services__subtitle">Пожарная сигнализация и противопожарные системы</div>
+                        </a>
+                        <a href="#" class="services__item">
+                            <img src="img/services_4.png" alt="#">
+                            <div class="services__subtitle">Системы контроля и <br> управления доступом</div>
+                        </a>
+                        <a href="#" class="services__item">
+                            <img src="img/services_5.png" alt="#">
+                            <div class="services__subtitle">Технические средства охраны <br> зданий, сооружений и периметров</div>
+                        </a>
+                        <a href="#" class="services__item">
+                            <img src="img/services_6.png" alt="#">
+                            <div class="services__subtitle">Видеонаблюдение</div>
+                        </a>
+                    </div>
+                    <button class="btn">Оставить заявку</button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
