--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -106,6 +106,56 @@
                 </div>
             </div>
         </section>
+        <section class="whyWe">
+            <div class="container">
+                <div class="section__title whyWe__title">Почему нас выбирают?</div>
+                <div class="whyWe__items">
+                    <div class="whyWe__item">
+                        <div class="whyWe__icon">
+                            <img src="img/whyWe_1.svg" alt="#">
+                        </div>
+                        <div class="whyWe__subtitle">Профессионализм</div>
+                        <div class="whyWe__descr">Более 25 лет успешной работы в сфере охранных услуг </div>
+                    </div>
+                    <div class="whyWe__item">
+                        <div class="whyWe__icon">
+                            <img src="img/whyWe_2.svg" alt="#">
+                        </div>
+                        <div class="whyWe__subtitle">Широкий спектр услуг</div>
+                        <div class="whyWe__descr">Охраняем объекты любого типа и уровня сложности</div>
+                    </div>
+                    <div class="whyWe__item">
+                        <div class="whyWe__icon">
+                            <img src="img/whyWe_3.svg" alt="#">
+                        </div>
+                        <div class="whyWe__subtitle">Качество</div>
+                        <div class="whyWe__descr">Собственные монтажные бригады и тех ...</div>
+                    </div>
+                    <div class="whyWe__item">
+                        <div class="whyWe__icon">
+                            <img src="img/whyWe_4.svg" alt="#">
+                        </div>
+                        <div class="whyWe__subtitle">Забота о клиентах</div>
+                        <div class="whyWe__descr">Индивидуальный подход и полная конфединциальность</div>
+                    </div>
+                    <div class="whyWe__item">
+                        <div class="whyWe__icon">
+                            <img src="img/whyWe_5.svg" alt="#">
+                        </div>
+                        <div class="whyWe__subtitle">Всегда рядом</div>
+                        <div class="whyWe__descr">Круглосуточная служба охраны и поддержки</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="section__title about__title">О нас</div>
+                <div class="about__box">
+                    
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
