--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -152,14 +152,277 @@
             <div class="container">
                 <div class="section__title about__title">О нас</div>
                 <div class="about__box">
-                    
+                    <div class="about__left">
+                        <div class="about__history">
+                            <div class="about__history__logo">
+                                <img src="img/about_logo.png" alt="#">
+                            </div>
+                            <div class="about__history__text">
+                                Частная охранная организация «Витязь-96» образована в июле 1996 г. 
+                                Мы -  одни из первых в Пушкинском районе Московской области.
+                            </div>
+                        </div>
+                        <div class="about__offer">
+                            <div class="about__offer__box">
+                                <div class="about__offer__title">Что мы предлагаем?</div>
+                                <div class="about__offer__items">
+                                    <div class="about__offer__item">защиту жизни и здоровья граждан</div>
+                                    <div class="about__offer__item">охрану имущества собственника, в том числе при его транспортировке</div>
+                                    <div class="about__offer__item">
+                                        проектирование, монтаж и эксплуатационное обслуживание средств охранно-пожарной сигнализации
+                                    </div>
+                                    <div class="about__offer__item">
+                                        консультирование клиентов по вопрсам правомерной защиты от противоправных посягательств
+                                    </div>
+                                    <div class="about__offer__item">обеспечение порядка в местах проведения массовых мероприятий</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about__right">
+                        <div class="about__img">
+                            <img src="img/about_img.png" alt="#">
+                        </div>
+                        <div class="about__descr">
+                            <div class="about__descr__text">
+                                Мы уделяем особое внимание <span>профессиональной</span> <span>подготовленности</span>  сотрудников. У нас работают только  <span>лицензированные</span> сотрудники, прошедшие тестирование и имеющие опыт работы <span>не менее 2-х лет.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="feedback">
+            <div class="feedback__bg__first">
+                <div class="feedback__bg__second">
+                    <div class="container">
+                        <div class="feedback__box">
+                            <div class="feedback__left">
+                                <div class="section__title feedback__title">Заказать обратный звонок</div>
+                                <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+                            </div>
+                            <div class="feedback__right">
+                                <form action="#" class="feedback-form">
+                                    <input name="name" placeholder="Ваше имя" required>
+                                    <input name="phone" placeholder="Номер телефона" required>
+                                    <button class="btn">Оставить заявку</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="geo">
+            <div class="geo__bg__box">
+                <div class="container">
+                    <div class="section__title geo__title">Геолокация</div>
+                    <div class="geo__box">
+                        <div class="geo__left">
+                            <div class="geo__subtitle">Районы Москвы и МО, в которых мы осуществляем услуги:</div>
+                            <div class="geo__district">
+                                <div class="geo__items">
+                                    <div class="geo__item">Теплый стан</div>
+                                    <div class="geo__item">Отрадное</div>
+                                    <div class="geo__item">Пресненский район</div>
+                                    <div class="geo__item">Теплый стан</div>
+                                    <div class="geo__item">Отрадное</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="geo__right">
+                            <div class="geo__map">
+                                <img src="img/geo_map.jpg" alt="#">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="news">
+            <div class="container">
+                <div class="section__title news__title">Наши новости</div>
+                <div class="news__box">
+                    <div class="news__tabcontent active">
+                        <div class="news__item news__item__first">
+                            <div class="news__subtitle">Lorem ipsum dolor sit amet 1</div>
+                            <div class="news__text">
+                                <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
+                            </div>
+                        </div>
+                        <div class="news__item news__item__second">
+                            <div class="news__subtitle">Lorem ipsum dolor sit amet 1</div>
+                            <div class="news__text">
+                                <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news__tabcontent">
+                        <div class="news__item">
+                            <div class="news__subtitle">Lorem ipsum dolor sit amet 2</div>
+                            <div class="news__text">
+                                <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
+                            </div>
+                        </div>
+                        <div class="news__item">
+                            <div class="news__subtitle">Lorem ipsum dolor sit amet 2</div>
+                            <div class="news__text">
+                                <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news__tabcontent">
+                        <div class="news__item">
+                            <div class="news__subtitle">Lorem ipsum dolor sit amet 3</div>
+                            <div class="news__text">
+                                <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
+                            </div>
+                        </div>
+                        <div class="news__item">
+                            <div class="news__subtitle">Lorem ipsum dolor sit amet 3</div>
+                            <div class="news__text">
+                                <p>Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="news__tabs">
+                        <li class="news__tablink active">1</li>
+                        <li class="news__tablink">2</li>
+                        <li class="news__tablink">3</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="faq">
+            <div class="container">
+                <div class="section__title faq__title">Ответы на вопросы</div>
+                <div class="faq__subtitle">Здесь вы можете найти ответы на самые популряные вопросы наших клиентов</div>
+                <div class="faq__items">
+                    <div class="faq__item">
+                        <div class="faq__item__button">Как купить охранную систему?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu. Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget lacus ut tristique. Etiam id commodo arcu.
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <div class="faq__item__button">Какова стоимость оборудования?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <div class="faq__item__button">Что входит в комплект оборудования?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <div class="faq__item__button">Когда осуществляется реагирование по тревожному сигналу?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <div class="faq__item__button">Каким образом можно вносить абонентскую плату?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <div class="faq__item__button">Что делать, если забыли поставить объект на охрану?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <div class="faq__item__button">Какие документы нужны для заключения договора охраны?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <div class="faq__item__button">Как устроиться к нам на работу?</div>
+                        <div class="faq__item__content">
+                            Consectetur adipiscing elit. Donec nec libero ac enim viverra tempor. Etiam quam nunc, ullamcorper non faucibus ac, aliquam et risus. Donec iaculis eget
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-
+        <div class="container">
+            <div class="footer__box">
+                <div class="footer__item">
+                    <div class="footer__subtitle">Услуги</div>
+                    <div class="footer__links">
+                        <ul>
+                            <li>
+                                <a href="#">Физическая охрана</a>
+                            </li>
+                            <li>
+                                <a href="#">Видеонаблюдение</a>
+                            </li>
+                            <li>
+                                <a href="#">Пультовая охрана</a>
+                            </li>
+                            <li>
+                                <a href="#">Пожарная сигнализация и противопожарные системы</a>
+                            </li>
+                            <li>
+                                <a href="#">Технические средства охраны зданий, сооружений и периметров</a>
+                            </li>
+                            <li>
+                                <a href="#">Системы контроля и управления доступом</a>
+                            </li>
+                            <li>
+                                <a href="#">Дополнитеньные услуги</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__item">
+                    <div class="footer__subtitle">ЧОО Витязь-96</div>
+                    <div class="footer__links">
+                        <ul>
+                            <li>
+                                <a href="#">О компании</a>
+                            </li>
+                            <li>
+                                <a href="#">Лицензия</a>
+                            </li>
+                            <li>
+                                <a href="#">Договор оферты</a>
+                            </li>
+                            <li>
+                                <a href="#">Политика конфиденциальности</a>
+                            </li>
+                        </ul>
+                        <a href="#" class="footer__logo">
+                            <img src="img/about_logo.png" alt="#">
+                        </a>
+                    </div>
+                </div>
+                <div class="footer__item">
+                    <div class="footer__subtitle">Контакты</div>
+                    <div class="footer__contacts">
+                        <a href="tel:+77777777777" class="footer__phone">
+                            <img src="img/phone_icon.svg" class="footer__icon" alt="#">
+                            +7 777 777 77 77
+                        </a>
+                        <a href="mailto:vityaz-96@mail.ru" class="footer__mail">
+                            <img src="img/mail_icon.svg" class="footer__icon" alt="#">
+                            vityaz-96@mail.ru
+                        </a>
+                        <div class="footer__adress">
+                            <img src="img/geo_icon.svg" class="footer__icon" alt="#">
+                            141231,  Московская область, Пушкинский <br> район, р.п. Лесной, ул. Пушкина, д. 2
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
 	<div class="overlay">
